# api-automation-document-analysis

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 112f0ea76a000af0.txt  16a1f06c04e00256.txt  19b8883918e5060e.txt  1d9f3a2e53620677.txt  2373a226b5daa29.txt  2ca86192e3f39dfd.txt  331bba866cb2118d.txt  3848d6c4a34f34f8.txt  3e518f6c09c4d36.txt  42f90524e3d90e18.txt  47f58c3eef38fee0.txt  4b5f3c45070743a4.txt  4ccaf5324620db06.txt  4e63b446e07db480.txt  51af23ea73a60024.txt  538b53d8c8b87f1b.txt  539032a6677a1805.txt  553bd2ef962b2d66.txt  590811b620032e38.txt  5a8b499473c08134.txt  5d9dc89747763786.txt  5fa577d24a2cdc23.txt  645a3d8f412fa9fc.txt  65dd39c0439fc834.txt  6bb0ad419d3b9d89.txt  70eac53b8b4ecf86.txt  723e2b88f6d5486e.txt  75e290e79a98b693.txt  781ccce5723e8ae2.txt  7c46ac74825ebbf9.txt  828ae31aa638f1fd.txt  830d79d300481e03.txt  8434d73f2ddf36a1.txt  85a30d369ec669f8.txt  8aa4bbed387aaa0e.txt  8dde07ccdfe1a9fc.txt  8e4629e95ac7128d.txt  94a0713d31e8fa6d.txt  960a77704dcf40c0.txt  989a773809f69cb7.txt  (+36 more)
data/test-cases/: 1aeaab438f4d2c3d.json  22199b4da75cf02.json  27532b0ff480e796.json  2ae995f2371000a1.json  2f0bf23143e6704d.json  39b64bff963651c1.json  3f570d7cb3837f5e.json  43845fb0ec3d1ab6.json  443b3073cdeefee2.json  44cd1e232c72fc9e.json  463f3a018ccdfcdd.json  49e6e97f48a97bc0.json  4b8cc5ec95733a6a.json  5085d790bc9642b5.json  53d748b6b906fc17.json  58dc5c98cabefe99.json  5b1ddb5638f0716b.json  601bc3c3d9a28791.json  6583c996c4f6fecc.json  65c1a136973c7530.json  67cdd5bb20d16f10.json  7096822472c53903.json  70f38932708e58d2.json  8de1cf56049ce24c.json  9da00ffb1fa4101d.json  a02deaeffe1ce236.json  a6d6424515dd2035.json  a903d4fc52b29640.json  aa310e1d67fad1d0.json  b1782dbc077e00bb.json  b6a256d56672281b.json  bd5c4eaa00e29d36.json  c05b1bd5d919857c.json  c05ef3b83f0c9f11.json  c16b29ddf463b55d.json  c5122583f083cdca.json  cbd173c15227b184.json  d1f8e2a841fb292d.json  d2b309466142869d.json  d3d7a6537e9a3ec4.json  (+8 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: conftest.py
tests/contract/: test_schema_contract.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
(+10 files in other folders)
